--- a/research/index.html
+++ b/research/index.html
@@ -103,7 +103,7 @@
 <ol style="list-style-type: decimal">
 <li><p><em>“Let there be more light: The impact of headlamp law on road accidents.”</em>, with Leonardo Melo, <a href="https://sites.google.com/view/giuseppetrevisan" target = "_blank"> Giuseppe Trevisan</a> and
 <a href="https://sites.google.com/view/brenosampaio/personal-info" target="_blank">Breno Sampaio</a>. Work in Progress, January 2019.</p></li>
-<li><p><em>“Commodity prices and business cycles in emerging economies: The role of news shocks”</em>, with <a href="https://sites.google.com/site/marceloeasilva/" target="_blank">Marcelo Eduardo A. da Silva</a>. Working Paper, July 2017. <a href="https://github.com/cleytonfar/cleytonfar.github.io/blob/master/pdf/news_shocks.pdf?raw=true">[Preliminary draft]</a></p></li>
+<li><p><em>“Commodity prices and business cycles in emerging economies: The role of news shocks”</em>, with <a href="https://sites.google.com/site/marceloeasilva/" target="_blank">Marcelo Eduardo A. da Silva</a>. Working Paper, July 2017.</p></li>
 </ol>
 </div>
 
