--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			
 			<div class="row">
 				<div class="col-xs-12 user-profile text-center">
-					<h1 id="user-name">Mr Farias</h1>
+					<h1 id="user-name"></h1>
 				</div>
 			</div>
 			<div class="row">
@@ -139,13 +139,13 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 user-description text-center">
-					<p>Hello World!! I&#39;m Cleyton and this is my website. I am a data scientist and Phd candidate in Economics at Universidade Federal de Pernambuco. My main interest are in developing beautiful ways to extract wonderful insights from data. On this website you can expect my projects and blog posts about everything I love. Enjoy!</p>
+					<p>Hello World!! I&#39;m Cleyton and this is my website. I am a data scientist and Phd candidate in Economics at Universidade Federal de Pernambuco. My main interests are in developing beautiful ways to extract wonderful insights from data. On this website you can expect my projects and blog posts about everything I love. Enjoy!</p>
 				</div>
 			</div>
 			<div class="push"></div>
 		</div>
 		<footer class="footer text-center">
-<p>Copyright &copy; 2019 Mr Farias -
+<p>Copyright &copy; 2019  -
 <span class="credit">
 	Powered by
 	<a target="_blank" href="https://gohugo.io">Hugo</a>
