--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
-<link rel="stylesheet" href="/css/nix.css">
+<link rel="stylesheet" href="http://cleytonfar.github.io/css/nix.css">
 
 
 
-<link rel="shortcut icon" href="/data.png">
+<link rel="shortcut icon" href="images/data.png">
 
 
 
@@ -45,14 +45,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" id="green-terminal" href=/>cleyton@farias ~ $</a>
+			<a class="navbar-brand" id="green-terminal" href=http://cleytonfar.github.io/>cleyton@farias ~ $</a>
 		</div>
 
 		
 		<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="/">/home/cleyton</a>
+					<a href="http://cleytonfar.github.io/">/home/cleyton</a>
 				</li>
 				
 				
@@ -94,7 +94,7 @@
 			
 			<div class="row">
 				<div class="col-sm-3 col-centered">
-					<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/cleyton3.jpg">
+					<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="images/cleyton3.jpg">
 				</div>
 			</div>
 			
