--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
-<link rel="stylesheet" href="https://cleytonfar.github.io/css/nix.css">
+<link rel="stylesheet" href="/css/nix.css">
 
 
 
-<link rel="shortcut icon" href="images/data.png">
+<link rel="shortcut icon" href="/favicon.ico">
 
 
 
@@ -45,14 +45,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" id="green-terminal" href=https://cleytonfar.github.io/>cleyton@farias ~ $</a>
+			<a class="navbar-brand" id="green-terminal" href=/>cleyton@farias ~ $</a>
 		</div>
 
 		
 		<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="https://cleytonfar.github.io/">/home/cleyton</a>
+					<a href="/">/home/cleyton</a>
 				</li>
 				
 				
