--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 
 
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-133483289-1', 'auto');
+	  ga('send', 'pageview');
+
+</script>
+
 
 
 	</head>
@@ -139,7 +150,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 user-description text-center">
-					<p>Hello World!! I&#39;m Cleyton and this is my website. I am a data scientist and Phd candidate in Economics at Universidade Federal de Pernambuco. My main interests are in developing beautiful ways to extract wonderful insights from data. On this website you can expect my projects and blog posts about everything I love. Enjoy!</p>
+					<p>Hello World!! I&#39;m Cleyton and this is my website. I am a data scientist and Phd candidate in Economics at Universidade Federal de Pernambuco. My main interest is on developing beautiful ways to extract wonderful insights from data. On this website you can expect my projects and blog posts about everything I love. Enjoy!</p>
 				</div>
 			</div>
 			<div class="push"></div>
