--- a/talks/index.html
+++ b/talks/index.html
@@ -116,6 +116,14 @@ ga('create', 'UA-133483289-1', 'auto');
 <li><em>“Commodity prices and business cycles in emerging economies: The role of news shocks”</em>, presented at: <strong>The 39th Annual Brazilian Econometric Society Meeting 2017</strong>; <strong>The 22nd Annual LACEA Meeting 2017</strong>.</li>
 </ol>
 </div>
+<div id="courses" class="section level1">
+<h1>Courses</h1>
+<p><br/></p>
+<ol style="list-style-type: decimal">
+<li><em>“Applied Machine Learning with R”</em> course from 27th to 29th of March, 2019 at <strong>Universidade Federal da Paraíba</strong>. Link to the
+<a href="https://github.com/cleytonfar/applied_machinear_learning_with_R" target = "_blank"> repository</a>;</li>
+</ol>
+</div>
 
             </div>
             
