--- a/talks/index.html
+++ b/talks/index.html
@@ -120,8 +120,8 @@ ga('create', 'UA-133483289-1', 'auto');
 <h1>Courses</h1>
 <p><br/></p>
 <ol style="list-style-type: decimal">
-<li><em>“Applied Machine Learning with R”</em> course from 27th to 29th of March, 2019 at <strong>Universidade Federal da Paraíba</strong>. Link to the
-<a href="https://github.com/cleytonfar/applied_machinear_learning_with_R" target = "_blank"> repository</a>;</li>
+<li><em>“Applied Machine Learning with R”</em> course from 27th to 29th of March, 2019 at <strong>Universidade Federal da Paraíba</strong>.
+<a href="https://github.com/cleytonfar/applied_machinear_learning_with_R" target = "_blank">Link to the repository</a>;</li>
 </ol>
 </div>
 
